--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
     <div class="container">
         <header>
             <h1>Task Manager</h1>
-            <input type="text" id="taskInput" placeholder="Enter a new task...">
-            <button id="addTaskBtn">Add Task</button>
+            <div class="header-controls">
+                <input type="text" id="taskInput" placeholder="Enter a new task...">
+                <input type="number" id="daysInput" placeholder="Enter number of days">
+                <button id="addTaskBtn">Add Task</button>
+            </div>
+            <div class="filter-controls">
+                <button id="showCompletedBtn">Show Completed</button>
+                <button id="showIncompleteBtn">Show Incomplete</button>
+                <button id="showAllBtn">Show All</button>
+            </div>
         </header>
         <ul id="taskList"></ul>
     </div>
