--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Manager</title>
+    <meta name="description" content="A simple and efficient task manager application to keep track of your tasks and their deadlines. Created by Shiva Aryal.">
+    <meta name="keywords" content="task manager, to-do list, productivity, task tracking, task management app">
+    <meta name="author" content="Shiva Aryal">
     <link rel="stylesheet" href="style.css">
 </head>
 
